--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ html{
     font-family: 'Open Sans', sans-serif;
 }
 
+main{
+
+position: relative;
+top: 15vh;
+
+}
+
 /* Settings Principal Boxes  */
 
 /* SECTION HEADER  */
@@ -21,11 +28,12 @@ html{
 header{
 
 display: flex;
-position: fixed;    
 height: 15vh;
 width: 100%;
 justify-content: space-between;
 align-content: flex-start;
+position: fixed;
+z-index: 998;
 
 /* debug */
 background-color: blueviolet;
@@ -60,17 +68,147 @@ border: 1px solid black;
 
 /* SECTION CONTAINER-1  */
 
+.jumbo{
+
+width: 100%;
+text-align: center;
+
+/* debug */
+background-color: darkslateblue;
+height: 300px;
+}
+
+
 .container-1{
 
-width: 90%;
+width: 80%;
+margin: 0 auto; 
 
 /* debug */
 background-color: darkorange;
+border: 1px solid black;
+height: 290px;
+}
 
+.jumbo-section{
+
+display: flex;
+justify-content: center;
+align-content: flex-start;
+column-gap: 16px;
+align-items: center;
+
+/* debug */
+background-color: yellowgreen;
+border: 1px solid black;
+height: 200px;
+
+}
+
+.card-jumbo{
+
+/* debug */
+height: 100px;
+background-color:violet;
+border: 1px solid black;
 }
 
 
 
+/* SECTION CONTAINER-2  */
 
+.container-2{
+
+
+    width: 60%;
+    margin: 0 auto; 
+    text-align: center;
+    /* debug */
+    background-color: pink;
+    border: 1px solid black;
+    height: 100000000px;
+
+}
+
+
+/* Section one of container-2  */
+
+.div-check{
+
+display: flex;
+margin-top: 18px;
+
+/* debug */
+background-color: tomato;
+border: 1px solid black;
+align-content: flex-start;
+
+}
+
+.check{
+
+/* debug */
+background-color: yellowgreen;
+
+}
+
+
+.flex-colum{
+
+display: flex;
+align-content: flex-start;
+
+/* debug */
+background-color: gray;
+height: 650px;
+
+}
+
+
+.col{
+
+width: calc(100% / 3 - 5px);
+margin: 5px;
+text-align: center;
+
+/* debug  */
+background-color: coral;
+border: 1px solid black;
+height: 630px;
+
+}
+
+.col-elements{
+
+display: flex;
+flex-wrap: wrap;
+align-content: space-around;
+width: 100%;
+row-gap: 10px;
+padding-top: 10px;
+
+
+/* debug  */
+background-color: seagreen;
+border: 1px solid blue;
+height: 590px;
+
+}
+
+.col-elements ul{
+
+list-style: none;
+
+}
+
+.col-elements div{
+
+width: 100%;;
+text-align: start;
+
+/* debug */
+background-color: darkturquoise;
+border: 1px solid red;
+}
 
 
