--- a/css/style.css
+++ b/css/style.css
@@ -388,16 +388,24 @@ padding-bottom: 15px;
 
 
 
-/* Section 4 of container-2  */
+/* SECTION 4 of container-2  */
 
 .description-cards{
 
 width: 100%;
+margin-top: 100px;
+margin-bottom: 100px;
 
 /* debug */
-background-color: lightsalmon;
-border: 1px dashed black;
-height: 665px;
+/* background-color: lightsalmon; */
+/* border: 1px dashed black; */
+/* height: 665px; */
+
+}
+
+.description-cards h2{
+
+margin-bottom: 20px;
 
 }
 
@@ -407,28 +415,30 @@ width: 100%;
 display: flex;
 flex-wrap: wrap;
 align-content: flex-start;
-column-gap: 5px;
+column-gap: 10px;
 row-gap: 10px;
 
 
 
 /* debug */
-background-color:chocolate
-border: 1px solid red;
+/* background-color:chocolate; */
+/* border: 1px solid red; */
 
 }
 
 .card{
 
-width: calc(100% / 3 - 5px);
+width: calc(100% / 3 - 10px);
 display: flex;
 justify-content: flex-start;
 flex-direction: column;
+justify-content: space-around;
+row-gap: 15px;
 
 /* debug */
-background-color: deeppink;
-border: 1px dashed blue;
-height: 300px;
+/* background-color: deeppink; */
+/* border: 1px dashed blue; */
+/* height: 300px; */
 
 
 
@@ -436,17 +446,26 @@ height: 300px;
 
 .card div{
 
-height: calc(100% / 3);   
+/* height: calc(100% / 3); */
 width: 100%;
 text-align: left;
 
 /* debug */
-background-color: darkolivegreen;
-border: 1px solid white;
+/* background-color: darkolivegreen; */
+/* border: 1px solid white; */
 
 }
 
-/* Section 5 of container-2 */
+.height-25{
+
+width: 25%;
+
+}
+
+
+
+
+/* SECTION 5 of container-2 */
 
 
 .info-clients{
