--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,6 @@ position: fixed;
 z-index: 998;
 background-color: white;
 
-/* debug */
-/* background-color: blueviolet; */
-
 }
 
 .item-header{
@@ -50,18 +47,11 @@ align-items: center;
 column-gap: 15px;
 padding: 10px;
 
-/* debug */
-/* background-color: brown; */
-
 }
 
 .card-header{
 
 font-size: small;
-
-/* debug */
-/* background-color: yellow; */
-/* border: 1px solid black; */
 
 }
 
@@ -73,10 +63,8 @@ font-size: small;
 .jumbo{
 
 width: 100%;
+background-color: #B4D0E7;
 
-/* debug */
-background-color: rgb(35, 140, 182);
-/* height: 300px; */
 }
 
 .jumbo h1{
@@ -92,11 +80,6 @@ width: 90%;
 width: 62%;
 margin: 0 auto; 
 
-/* debug */
-/* background-color: darkorange; */
-/* border: 1px solid black; */
-/* height: 290px; */
-
 }
 
 .jumbo-section{
@@ -105,21 +88,11 @@ display: flex;
 align-content: flex-start;
 align-items: center;
 margin-bottom: 110px;
-/* debug */
-/* background-color: yellowgreen; */
-/* border: 1px solid black; */
-/* height: 200px; */
 
 }
 
 .card-jumbo{
    
-/* debug */
-/* height: 100px; */
-
-/* background-color:violet; */
-/* border: 1px solid black; */
-
 }
 
 .card-jumbo p{
@@ -138,7 +111,7 @@ margin-bottom: 13px;
 .card-jumbo img{
 
 position: relative;
-top: 35px;
+top: 60px;
 
 }
 
@@ -162,12 +135,8 @@ top: 35px;
 
 
 width: 52%;
-margin: 0 auto; 
+margin: 0 auto;
 
-/* debug */
-/* background-color: pink; */
-/* border: 1px solid black; */
-   
 }
 
 
@@ -179,12 +148,6 @@ margin: 0 auto;
 
 display: flex;
 margin-top: 18px;
-
-/* debug */
-/* background-color: tomato; */
-/* border: 1px solid black; */
-/* align-content: flex-start; */
-
 }
 
 .check{
@@ -192,10 +155,6 @@ margin-top: 18px;
 margin-right: 25px;
 margin-top: 25px;
 margin-bottom: 55px;
-
-
-/* debug */
-/* background-color: yellowgreen; */
 
 }
 
@@ -205,10 +164,6 @@ margin-bottom: 55px;
 display: flex;
 align-content: flex-start;
 column-gap: 15px;
-
-/* debug */
-/* background-color: gray; */
-/* height: 650px; */
 
 }
 
@@ -220,11 +175,6 @@ margin: 5px;
 text-align: center;
 width: 80%;
 border: 1px solid rgb(173, 173, 173); 
-
-/* debug  */
-/* background-color: coral; */
-/* border: 1px solid black; */
-/* height: 630px; */
 
 }
 
@@ -261,11 +211,6 @@ width: 100%;
 row-gap: 30px;
 padding: 15px;
 
-/* debug  */
-/* background-color: seagreen; */
-/* border: 1px solid blue; */
-/* height: 590px; */
-
 }
 
 .col-elements ul{
@@ -280,9 +225,6 @@ font-size: small;
 width: 100%;;
 text-align: start;
 
-/* debug */
-/* background-color: darkturquoise; */
-/* border: 1px solid red; */
 }
 
 .col-elements li{
@@ -304,12 +246,6 @@ margin-top: 30px;
 border: 1px solid rgb(173, 173, 173); 
 margin-bottom: 30px;
 
-/* debug */
-
-/* height: 190px; */
-/* background-color: royalblue; */
-/* border: 1px solid black; */
-
 }
 
 .contact-sell h5{
@@ -317,7 +253,7 @@ margin-bottom: 30px;
  text-align: center;   
  padding-bottom: 5px;
  margin-top: 5px;
-border-bottom: 1px solid black;
+border-bottom: 1px solid rgb(173, 173, 173);
 
 }
 
@@ -338,11 +274,6 @@ padding-top: 15px;
 padding-left: 10px;
 padding-right: 10px;
 
-/* * debug */ 
-/* background-color: tan; */
-/* border: 1px solid green; */
-
-
 }
 
 
@@ -353,11 +284,6 @@ padding-right: 10px;
 
 display: flex;
 width: 100%;
-
-    /* debug */
-/* background-color: springgreen; */
-/* border: 1px solidd black; */
-/* height: 400px; */
 
 }
 
@@ -396,11 +322,6 @@ width: 100%;
 margin-top: 100px;
 margin-bottom: 100px;
 
-/* debug */
-/* background-color: lightsalmon; */
-/* border: 1px dashed black; */
-/* height: 665px; */
-
 }
 
 .description-cards h2{
@@ -418,12 +339,6 @@ align-content: flex-start;
 column-gap: 10px;
 row-gap: 10px;
 
-
-
-/* debug */
-/* background-color:chocolate; */
-/* border: 1px solid red; */
-
 }
 
 .card{
@@ -435,24 +350,12 @@ flex-direction: column;
 justify-content: space-around;
 row-gap: 15px;
 
-/* debug */
-/* background-color: deeppink; */
-/* border: 1px dashed blue; */
-/* height: 300px; */
-
-
-
 }
 
 .card div{
 
-/* height: calc(100% / 3); */
 width: 100%;
 text-align: left;
-
-/* debug */
-/* background-color: darkolivegreen; */
-/* border: 1px solid white; */
 
 }
 
@@ -474,11 +377,6 @@ width: 100%;
 text-align: left;
 margin-bottom: 100px;
 
-/* debug */
-/* color: orchid; */
-/* border: 1px solid red; */
-/* height: 200px; */
-
 }
 
 .info-clients h2{
@@ -498,10 +396,6 @@ display: flex;
 align-content: flex-start;
 height: 500px;
 
-/* debug */
-/* background-color: purple; */
-/* border: 1px solid black; */
-
 }
 
 .sponsor-card{
@@ -512,10 +406,6 @@ display: flex;
 align-content: flex-start;
 flex-wrap: wrap;
 
-/* debug */
-/* background-color: mediumslateblue; */
-/* border: 1px solid black; */
-
 }
 
 .lateral{
@@ -525,11 +415,6 @@ width: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
-
-
-/* debug */
-/* background-color: darkcyan; */
-/* border: 1px dashed yellow; */
 
 }
 
@@ -551,10 +436,6 @@ height: calc(100% / 3);
 background-color: #f5f5f5;
 padding-top: 20px;
 padding-left: 20px;
-
-/* debug */
-/* background-color: orange; */
-/* border: 1px dashed black; */
 
 }
 
@@ -578,7 +459,7 @@ margin-top: -20px;
 
 height: 1px;
 width: 25%;
-border-bottom: 1px solid black;
+border-bottom: 1px solid rgb(173, 173, 173); 
 margin-left: 20px;
 margin-top: -40px;
 
@@ -630,10 +511,6 @@ margin: 0 auto;
 text-align: center;
 text-align: left;
 margin-top: 100px;
-
-
-/* debug */
-/* background-color: blue; */
 margin-bottom: 100px;
 
 }
@@ -685,20 +562,25 @@ background-color: black;
 
 display: flex;
 align-content: flex-start;
-height: 200px;
+color: white;
 
+/* height: 200px; */
 
 }
 
 .toolbar div {
 
 width: calc(100% / 5);
-height: 100%;
+/* height: 100%; */
+padding-top: 50px;
+padding-bottom: 50px;
 
-/* debug */
+}
 
-background-color: rosybrown;
-border: 1px solid black;
+.toolbar h4{
+
+margin-bottom: 15px;
+
 
 }
 
@@ -707,10 +589,23 @@ border: 1px solid black;
 padding-top: 20px;
 text-align: left;
 width: 15%;
+color: white;
+border-top: 1px solid white;
 
-/* debug */
-background-color: yellow;
-border: 1px solid black;
+}
+
+.toolbar li{
+
+ list-style: none;   
+ font-size: small;
+ margin-bottom: 5px;
+
+}
+
+.language span {
+
+ margin-left: 5px;
+ margin-right: 5px;   
 
 }
 
@@ -757,7 +652,7 @@ border: 1px solid black;
 
 .back-blue{
 
-    background-color: aqua;
+    background-color: #0061ff;
 
 }
 
@@ -802,7 +697,7 @@ font-size: small;
 .linedown{
 
 padding-bottom: 20px;
-border-bottom: 1px solid black;
+border-bottom: 1px solid rgb(173, 173, 173);
 
 }
 
