--- a/css/style.css
+++ b/css/style.css
@@ -559,11 +559,27 @@ padding-bottom: 15px;
 }
 
 .bord-up-down{
-
+    
 border-bottom: 1px solid black;
 border-top: 1px solid black;   
 
 }
+
+.ans{
+   
+display: none;
+
+}
+
+
+
+.fa-angle-up::before{
+
+position: relative;
+display: none;
+
+}
+
 
 
 /* Setting Section Footer  */
@@ -616,8 +632,9 @@ margin-bottom: 15px;
 padding-top: 20px;
 text-align: left;
 width: 15%;
-color: white;
-border-top: 1px solid white;
+color: rgb(211, 211, 211);
+border-top: 1px solid rgb(211, 211, 211);
+padding-bottom: 10px;
 
 }
 
@@ -688,6 +705,15 @@ border: 1px solid black;
 color: white;
 
 }
+
+
+.text-black{
+
+color: black;
+
+}
+
+
 
 img{
 
@@ -830,12 +856,64 @@ color:  rgba(0, 0, 0, 0.541);
 .no-line{
 
 text-decoration: none;
-color: black;
 
 }
+
 
 .toolbar li:hover{
 
     border-bottom: 1px solid white;
 
+}
+
+
+.bord-up-down:active{
+
+content: "Ciaoooooooooo";
+
+
+}
+
+.dropdown {
+    position: relative;
+    display: none;
+    
+  }
+
+.bord-up-down:active .dropdown{
+
+display: block;
+
+}
+
+.drop:active .dropdown{
+
+display: block;    
+
+}
+
+.drop:active .fa-angle-up::before{
+
+display: block;
+
+
+}
+
+.drop:active .fa-angle-down::before{
+
+display: none;
+
+}
+
+
+.bord-up-down:active .fa-angle-up::before{
+
+display: block;
+        
+ }
+    
+.bord-up-down:active .fa-angle-down::before{
+    
+display: none;
+    
 }
