--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ background-color: #B4D0E7;
 
 font-size: -webkit-xxx-large;
 width: 90%;
+padding-top: 50px;
 
 }
 
@@ -111,27 +112,38 @@ margin-bottom: 110px;
 
 }
 
-.card-jumbo{
+.card-jumbo-1{
+
+ font-size: 15px;   
+width: 30%;
+padding-top: 50px;
+
+}
+
+.card-jumbo-2{
    
-}
-
-.card-jumbo p{
-
-margin-bottom: 13px;
+width: 70%;
 
 }
 
-.card-jumbo span{
+.card-jumbo-1 p{
+
+margin-bottom: 25px;
+font-size: 13px;
+
+}
+
+.card-jumbo-1 span{
 
 display: inline-block;
-margin-bottom: 13px;   
+margin-bottom: 25px;   
 
 }
 
-.card-jumbo img{
+.card-jumbo-2 img{
 
 position: relative;
-top: 60px;
+top: 55px;
 
 }
 
@@ -143,6 +155,8 @@ top: 60px;
 
 .fa-arrow-down:before {
 
+ display: inline-block;   
+ margin-top: 15px;   
  font-size: xx-large;   
  color: black;
 
