--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ width: 65%;
 width: 100%;
 display: flex;
 align-content: flex-start;
-height: 500px;
+height: calc(100vw / 3);
 
 }
 
@@ -508,6 +508,7 @@ height: calc(100% / 3);
 background-color: #f5f5f5;
 padding-top: 20px;
 padding-left: 20px;
+overflow-y: auto;
 
 }
 
